test/mutatingwebhookconfiguration.yaml
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: mwc
  annotations:
    cert-utils-operator.redhat-cop.io/injectca-from-secret: test-cert-utils/test1
webhooks:
- name: mutaing.webhook.configuration
  rules:
  - apiGroups:
    - "ciao"
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - ciaos
    scope: "Namespaced"
  clientConfig:
    service:
      namespace: webhookns
      name: webhook
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: mwcs
  annotations:
    cert-utils-operator.redhat-cop.io/injectca-from-service_ca: "true"
webhooks:
- name: mutaing.webhook.configuration
  rules:
  - apiGroups:
    - "ciao"
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - ciaos
    scope: "Namespaced"
  clientConfig:
    service:
      namespace: webhookns
      name: webhook
