test/routes.yaml
apiVersion: v1
kind: Service
metadata:
  name: test
  annotations: 
    service.alpha.openshift.io/serving-cert-secret-name: test-ocp-secret
spec:
  ports:
  - name: 5000-tcp
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    docker-registry: default
---  
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    cert-utils-operator.redhat-cop.io/certs-from-secret: "test1"
  name: test1
spec:
  tls:
    termination: edge
  to:
    kind: Service
    name: test
---    
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    cert-utils-operator.redhat-cop.io/certs-from-secret: "test1"
    cert-utils-operator.redhat-cop.io/replace-dest-CA: "true"
  name: test2
spec:
  tls:
    termination: reencrypt
  to:
    kind: Service
    name: test
