test/validatingwebhookconfiguration.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: vwc
  annotations:
    cert-utils-operator.redhat-cop.io/injectca-from-secret: test-cert-utils/test1
webhooks:
- name: validating.webhook.configuration
  sideEffects: None
  admissionReviewVersions: 
  - v1
  rules:
  - apiGroups:
    - "ciao"
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - ciaos
    scope: "Namespaced"
  clientConfig:
    service:
      namespace: webhookns
      name: webhook
